--- a/lab1_manar.html
+++ b/lab1_manar.html
@@ -6,9 +6,13 @@
         </title>
     </head>
     <body>
+		<p>
+            The brown bear (Ursus arctos) is native to parts of northern Eurasia and North America.
+        </p>
         <br>
         The following countries have the largest populations of brown bear:
         <ol><li> Russia</li> <li>United states</li><li> Canada</li></ol>
         <img src="C:\Users\Exam\Desktop\WEBLAB\bear.jfif">
+		
     </body>
 </html>
